289: Chat no longer overlap

--- a/FU.SPA/src/components/Chat.css
+++ b/FU.SPA/src/components/Chat.css
@@ -3,7 +3,7 @@
 
   input {
     /* Set width to 800px to takeup whole width  */
-    width: 800px;
+    width: 1200px;
   }
 
   button {
